# aucta-crm-api

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  pyrightconfig.json
app/: main.py
app/core/: config.py  dependencies.py  exceptions.py  security.py
app/models/: booking.py  chat.py  common.py  custom_field.py  lead.py  lead_attachment.py  pipeline.py  product.py  task.py  user.py  vehicle.py
app/routers/v1/: bookings.py  chat.py  custom_fields.py  leads.py  pipelines.py  products.py  tasks.py  users.py  vehicles.py
app/services/: booking_service.py  chat_service.py  custom_field_service.py  lead_attachment_service.py  lead_service.py  pipeline_service.py  product_category_service.py  product_image_service.py  product_service.py  task_service.py  user_service.py  vehicle_service.py  whatsapp_send_service.py
app/utils/: pagination.py  supabase_client.py
