[project]
name = "api-crm"
version = "1.0.0"
description = "API pública do ADV-CRM para integrações de terceiros"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]",
    "uvicorn[standard]",
    "supabase",
    "pydantic-settings",
    "python-dotenv",
]

[dependency-groups]
dev = [
    "pytest",
    "httpx",
]
